# Ads-event-platform

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
ads_platform/: models.py  services.py  tests.py
ads_platform/management/commands/: consume_events.py
backend/: Dockerfile  requirements.txt
backend/ads_platform/: __init__.py  admin.py  apps.py  services.py  tests.py  views.py
backend/ads_platform/management/commands/: consume_events.py
backend/ads_platform/migrations/: 0001_initial.py
backend/config/: settings.py
config/: settings.py  urls.py
docs/: DESIGN.md
infra/clickhouse/: init.sql
