[project]
name = "ads-event-platform"
version = "0.1.0"
description = "MVP Ads event platform based on DESIGN.md"
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
  "django (>=5.0,<6.0)",
  "djangorestframework (>=3.15.0)",
  "gunicorn (>=21.2.0)",
  "psycopg2-binary (>=2.9.9)",
  "dj-database-url (>=2.2.0)",
  "clickhouse-driver (>=0.2.7)",
  "confluent-kafka (>=2.4.0)",
  "redis (>=5.0.0)",
  "pydantic (>=2.7.0)",
  "python-dotenv (>=1.0.1)",
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["config*", "ads_platform*"]
